--- a/style.css
+++ b/style.css
@@ -2,16 +2,28 @@
 html { box-sizing: border-box; }
 *, ::after, ::before { box-sizing: inherit; }
 
+/*
+BARVY:
+šedá na pozadí stránky:		 #b2bec3
+červená na hlavní nadpis:  #d63031
+
+tlačítko Twitter:					 #1da1f2
+tlačítko Twitter aktivní:	 #0b7bc1
+
+tlačítko Facebook:				 #3b5998
+tlačítko Facebook aktivní: #2b406e
+*/
+
 body {
-    padding-top:150px;
     background-color: #b2bec3;
     font-family: "Nunito", sans-serif;
+    font-optical-sizing: auto;
     font-size: 18px;
 }
 
 .main {
     position:relative;
-    margin: 0 auto;
+    margin: 150px auto;
     width: 550px;
     background-color: white;
     padding: 30px;
@@ -20,26 +32,28 @@ body {
 
 }
 
-.main img {
+img.photo {
     position:absolute; 
-top: -75px;
-right: -75px;
-width: 150px;
-height: 150px;
-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
-border: 3px solid white;
-border-radius: 50%;}
+    top: -75px;
+    right: -75px;
+    width: 150px;
+    height: 150px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+    border: 3px solid white;
+    border-radius: 50%;
+}
 
-h1 {color: #d63031;
-font-size: 36px;
-font-weight: bold;
-margin-top: 0;
-margin-bottom: 30px;
+h1 {
+    color: #d63031;
+    font-size: 36px;
+    font-weight: bold;
+    margin-top: 0;
+    margin-bottom: 30px;
 }
 
 .posledni {margin-bottom: 30px;}
 
-a.btn {
+.btn {
     display:block;
     padding: 10px;
     border-radius: 5px;
@@ -54,33 +68,20 @@ a.btn {
 
 a.x { 
     background-color:#1da1f2;
-    
+    margin-top: 30px;
 }
 
 a.x:hover {
     background-color: #0b7bc1;
-
 }
 
 
 a.fb {
     background-color: #3b5998;
-
 }
 
 a.fb:hover {
     background-color: #2b406e;
-
 }
-/*
-BARVY:
-šedá na pozadí stránky:		 #b2bec3
-červená na hlavní nadpis:  #d63031
 
-tlačítko Twitter:					 #1da1f2
-tlačítko Twitter aktivní:	 #0b7bc1
-
-tlačítko Facebook:				 #3b5998
-tlačítko Facebook aktivní: #2b406e
-*/
 
